# JewelryOS

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  TODO.md  build.sh
buildConfigs/JewelOS/: SysTypes.json  featureFlags.cmake  features.cmake  sdkconfig.defaults
components/Jewelry/: CMakeLists.txt
components/Jewelry/GridEarring/: GridEarring.cpp  GridEarring.h
components/Jewelry/HeartEarring/: HRMAnalysis.h  HeartEarring.cpp  HeartEarring.h
components/Jewelry/Jewelry/: HRMAnalysis.h  Jewelry.cpp  Jewelry.h  JewelryBase.h  LEDHeart.h
components/SignalProcessing/: CMakeLists.txt
components/SignalProcessing/Filters/: IIRFilter.h  IIRFilter2ndOrder.h  IIRFilter4thOrder.h  IIRFilter4thOrder_V1.h  IIRFilter4thOrder_v2.h  IIRFilter8thOrder.h  PIDController.h  (+3 more)
components/hardware/: CMakeLists.txt
components/hardware/LEDGrid/: Font5x5.h  Font5x5.txt  FontDef5x5.h  FontDef5x5.txt  GenerateFont.py  LEDGrid.cpp  LEDGrid.h  LEDPatternFont5x5.h  LEDPatternRainbowSnake.h  LEDPatternScrollMsg.h
components/hardware/LEDHeart/: LEDHeart.cpp  LEDHeart.h
components/hardware/MAX30101/: MAX30101.cpp  MAX30101.h
components/hardware/Microphone/: AnalogMicrophone.cpp  AnalogMicrophone.h  MCMicrophone.cpp  MCMicrophone.h
components/hardware/PowerControl/: PowerControl.cpp  PowerControl.h
evaluations/HRMAnalysis/: DataManipUtils.py  HRM_PLL_Analysis.ipynb
evaluations/HRMAnalysisCPP/: Filters_Eval.h  HRMAnalysisCPP  HRMAnalysisCPP.cpp  Makefile  ReadHRMData.h  SimpleMovingAvg_Eval.h  filter_common.h  filtered_data.txt  input_data.txt
evaluations/HRMAnalysisPyOlder/: HRMLogAnalysis.ipynb  SweepGen.ipynb
evaluations/HRMDataAnalysis/: HRMLogAnalysis.ipynb  HRMTest.ipynb
evaluations/HRMReadOverWifi/: HRMReadOverWifi.txt
evaluations/OlderFilterTests/: 20240519_1_ADC_Data.csv  Makefile  TestFilter.cpp  TestFilter.py  TestFilter4thGenerated.cpp  TestFilter4thGenerated.py  TestFilter4thGenerated_Upd  TestFilter4thGenerated_Upd.cpp  TestFilter4thGenerated_Upd.py  TestFilter4thOrder  TestFilter4thOrder.cpp
evaluations/OlderWork/: HRM_PLL_Analysis_with_MAX30101_data_only.ipynb
evaluations/ProcessLoggedHRMPollManagerData/: 20241031-221727-OUT.csv  20241031-230713.log.csv  20241031-233740.log.csv  20241031-234442.log.csv  20241101-004359.log.csv  ProcLogWithHRMPollData.py
main/: CMakeLists.txt  DetectHardware.cpp  DetectHardware.h  main.cpp
scripts/: build.py
systypes/Heart1.3/: SysTypes.json  features.cmake  sdkconfig.defaults
systypes/Heart1.3DevMan/: SysTypes.json  features.cmake  sdkconfig.defaults
systypes/Heart1.5/: SysTypes.json  features.cmake  sdkconfig.defaults
systypes/Heart1.7/: DevTypes.json  SysTypes.json  features.cmake  sdkconfig.defaults
systypes/JewelOS/: SysTypes.json  features.cmake  sdkconfig.defaults
(+100 files in other folders)
