idf_component_register(
                SRCS 
                  "Jewelry/Jewelry.cpp"
                  "HeartEarring/HeartEarring.cpp"
                  "GridEarring/GridEarring.cpp"                  
                INCLUDE_DIRS
                  "Jewelry"
                  "HeartEarring"
                  "GridEarring"
                REQUIRES
                  RaftCore
                  RaftI2C
                  hardware
                  SignalProcessing
                )
