idf_component_register(
                SRCS 
                  "MAX30101/MAX30101.cpp"
                  "PowerControl/PowerControl.cpp"
                  "LEDHeart/LEDHeart.cpp"
                  "LEDGrid/LEDGrid.cpp"
                  "Microphone/AnalogMicrophone.cpp"                  
                INCLUDE_DIRS
                  "MAX30101"
                  "PowerControl"
                  "LEDHeart"
                  "LEDGrid"
                  "Microphone"
                REQUIRES
                  raftcore-src
                  rafti2c-src
                )
