idf_component_register(
                SRCS 
                  "PowerControl/PowerControl.cpp"
                  "LEDHeart/LEDHeart.cpp"
                  "LEDGrid/LEDGrid.cpp"
                  "Microphone/AnalogMicrophone.cpp"                  
                INCLUDE_DIRS
                  "PowerControl"
                  "LEDHeart"
                  "LEDGrid"
                  "Microphone"
                REQUIRES
                  RaftCore
                  RaftI2C
                )
